--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "4.0.3",
     "react-tsparticles": "^1.24.2",
     "tsparticles": "^1.24.1",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
